[package]
name = "merklexyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
lurk = { path = "../", package = "lurk" }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
anyhow = "1.0"

[dev-dependencies]
